# lemmyBB

./: .drone.yml  .gitignore  .gitmodules  .woodpecker.yml  Cargo.toml  README.md  install  release.sh
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  BUG_REPORT.yml  FEATURE_REQUEST.md  FEATURE_REQUEST.yml  QUESTION.md  QUESTION.yml
assets/images/icons/: index.htm
assets/javascript/: ajax.js  core.js  editor.js  forum_fn.js  installer.js  plupload.js
assets/styles/: lemmybb.css
assets/styles/prosilver/: base.css  bidi.css  buttons.css  colours.css  common.css  content.css  cp.css  forms.css  icons.css  links.css  normalize.css  plupload.css  print.css  responsive.css  tweaks.css  utilities.css
config/: config.hjson
docker/: Dockerfile  docker-compose.yml  lemmy.hjson  lemmy_config.hjson  lemmy_config_default.hjson  nginx-lemmybb.conf  nginx-lemmyui.conf  nginx.conf
src/: api.rs  env.rs  error.rs  main.rs  pagination.rs  routes.rs  site_fairing.rs  template_helpers.rs  test.rs  utils.rs
src/api/: categories.rs  comment.rs  community.rs  extra.rs  image.rs  mod.rs  moderation.rs  post.rs  private_message.rs  site.rs  user.rs
src/routes/: backend_endpoints.rs  comment.rs  community.rs  federation.rs  mod.rs  moderation.rs  post.rs  private_message.rs  redirects.rs  site.rs  user.rs
templates/: advanced_search.html.hbs  comment_editor.html.hbs  editor.html.hbs  error.html.hbs  footer.html.hbs  header.html.hbs  index.html.hbs  index.stpl  login.html.hbs  message.html.hbs  posting.html.hbs  private_messages_thread.html.hbs  register.html.hbs  remove_item.html.hbs  report.html.hbs  search.html.hbs  search_results.html.hbs  setup.html.hbs  thread_editor.html.hbs  view_forum.html.hbs  view_profile.html.hbs  view_topic.html.hbs  viewforum.html.hbs  viewtopic.html.hbs
templates/components/: comment.html.hbs  editor.html.hbs  editor_form.html.hbs  footer.html.hbs  header.html.hbs  pagination.html.hbs  post.html.hbs  post_profile.html.hbs  user_control_panel_tabs.html.hbs
templates/private_message/: editor.html.hbs  overview.html.hbs  thread.html.hbs
templates/site/: community_list.html.hbs  index.html.hbs  mod_log.html.hbs  search.html.hbs  setup.html.hbs
templates/user/: edit_profile.html.hbs  login.html.hbs  register.html.hbs  view_profile.html.hbs
