[package]
name = "lemmy_bb"
version = "0.1.4"
edition = "2021"

[profile.release]
strip = "symbols"
debug = 0
lto = "thin"

[profile.dev]
strip = "symbols"
debug = 0

[features]
embed-lemmy = ["lemmy_server", "send_wrapper"]
embed-pictrs = ["embed-lemmy", "lemmy_server/embed-pictrs"]

[dependencies]
log = "0.4.17"
env_logger = { version = "0.9.1", features = ["termcolor", "humantime", "atty"], default-features = false }
lemmy_api_common = { git = "https://github.com/LemmyNet/lemmy.git", tag = "0.17.0-rc.3" }
lemmy_server = { git = "https://github.com/LemmyNet/lemmy.git", tag = "0.17.0-rc.3", optional = true }
once_cell = "1.15.0"
anyhow = "1.0.66"
rocket = { version = "0.5.0-rc.2", default-features = false }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "1.0.147"
reqwest = { version = "0.11.12", features = ["rustls-tls", "json", "cookies", "multipart"], default-features = false }
serde_json = "1.0.87"
comrak = { version = "0.14.0", default-features = false }
chrono = "0.4.22"
url = "2.3.1"
futures = { version = "0.3.25", default-features = false }
itertools = "0.10.5"
rand = "0.8.5"
deser-hjson = "1.0.2"
json-gettext = { version = "4.0.3", default-features = false }
tokio = "1.23.0"
send_wrapper = { version = "0.6.0", features = ["futures"], optional = true }
typed-builder = "0.11.0"

[dev-dependencies]
serial_test = "0.9.0"
ctor = "0.1.26"
lemmy_server = { git = "https://github.com/LemmyNet/lemmy.git", tag = "0.17.0-rc.3" }
actix-rt = "2.7.0"
