[package]
name = "lemmy_bb"
version = "0.2.1"
edition = "2021"

[profile.release]
strip = "symbols"
debug = 0
lto = "thin"

[profile.dev]
strip = "symbols"
debug = 0

[features]
default = []
embed-lemmy = ["lemmy_server", "send_wrapper"]
embed-pictrs = ["embed-lemmy", "lemmy_server/embed-pictrs"]

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
lemmy_api_common = { git = "https://github.com/LemmyNet/lemmy.git", tag = "0.17.2" }
lemmy_server = { git = "https://github.com/LemmyNet/lemmy.git", tag = "0.17.2", optional = true }
once_cell = "1.17.1"
anyhow = "1.0.70"
rocket = { version = "0.5.0-rc.3", default-features = false }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["handlebars"] }
serde = "1.0.160"
reqwest = { version = "0.11.16", features = ["rustls-tls", "json", "cookies", "multipart"], default-features = false }
serde_json = "1.0.96"
comrak = { version = "0.18.0", default-features = false }
chrono = "0.4.24"
url = "2.3.1"
futures = { version = "0.3.28", default-features = false }
itertools = "0.10.5"
rand = "0.8.5"
deser-hjson = "1.1.0"
json-gettext = { version = "4.0.5", default-features = false }
tokio = "1.27.0"
send_wrapper = { version = "0.6.0", features = ["futures"], optional = true }
typed-builder = "0.14.0"
http-cache-reqwest = "0.9.0"
reqwest-middleware = "0.2.1"

[dev-dependencies]
serial_test = "2.0.0"
ctor = "0.2.0"
lemmy_server = { git = "https://github.com/LemmyNet/lemmy.git", tag = "0.17.2" }
actix-rt = "2.8.0"
